2010-04-22  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Remove an assert. (It's not valid when resizing).

        * WebProcess/WebPage/mac/DrawingAreaUpdateChunk.cpp:
        (WebKit::DrawingAreaUpdateChunk::didUpdate):

2010-04-22  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Merge the prefix headers.

        * Configurations/BaseTarget.xcconfig:
        * WebKit2.xcodeproj/project.pbxproj:
        * WebKit2Prefix.h:
        * WebKit2_Prefix.pch: Removed.

2010-04-22  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Don't pass the new size when calling didSetSize, it's possible to get
        the size from the update chunk.

        * UIProcess/mac/DrawingAreaProxyUpdateChunk.h:
        * UIProcess/mac/DrawingAreaProxyUpdateChunk.mm:
        (WebKit::DrawingAreaProxyUpdateChunk::didSetSize):
        (WebKit::DrawingAreaProxyUpdateChunk::didReceiveMessage):
        * WebProcess/WebPage/mac/DrawingAreaUpdateChunk.cpp:
        (WebKit::DrawingAreaUpdateChunk::setSize):

2010-04-22  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Rename SetFrame and DidSetFrame to SetSize and DidSetSize.

        * Shared/CoreIPCSupport/DrawingAreaMessageKinds.h:
        (DrawingAreaMessage::):
        * Shared/CoreIPCSupport/DrawingAreaProxyMessageKinds.h:
        (DrawingAreaProxyMessage::):
        * UIProcess/mac/DrawingAreaProxyUpdateChunk.mm:
        (WebKit::DrawingAreaProxyUpdateChunk::drawRectIntoContext):
        (WebKit::DrawingAreaProxyUpdateChunk::setSize):
        (WebKit::DrawingAreaProxyUpdateChunk::didReceiveMessage):
        * WebProcess/WebPage/mac/DrawingAreaUpdateChunk.cpp:
        (WebKit::DrawingAreaUpdateChunk::setSize):
        (WebKit::DrawingAreaUpdateChunk::didReceiveMessage):

2010-04-22  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=38002