@@ -152,7 +152,7 @@ void DrawingAreaUpdateChunk::setSize(const WebCore::IntSize& viewSize)
 
     m_displayTimer.stop();
 
-    WebProcess::shared().connection()->send(DrawingAreaProxyMessage::DidSetFrame, m_webPage->pageID(), CoreIPC::In(viewSize, updateChunk));
+    WebProcess::shared().connection()->send(DrawingAreaProxyMessage::DidSetSize, m_webPage->pageID(), CoreIPC::In(viewSize, updateChunk));
 }
 
 void DrawingAreaUpdateChunk::didUpdate()
@@ -167,7 +167,7 @@ void DrawingAreaUpdateChunk::didUpdate()
 void DrawingAreaUpdateChunk::didReceiveMessage(CoreIPC::Connection*, CoreIPC::MessageID messageID, CoreIPC::ArgumentDecoder& arguments)
 {
     switch (messageID.get<DrawingAreaMessage::Kind>()) {
-        case DrawingAreaMessage::SetFrame: {
+        case DrawingAreaMessage::SetSize: {
             IntSize size;
             if (!arguments.decode(size))
                 return;
